# ai-marp-slidegen

./: .gitignore  README.md  flow_diagram.md  main.py  project-structure.md  pyproject.toml  technical_architecture.md
.github/: CODEOWNERS
__pycache__/: generator_new.cpython-314.pyc.1753691140144  main.cpython-314.pyc.1194351341616
marp_core/: __init__.py  config.py
marp_core/__pycache__/: __init__.cpython-314.pyc.1260553219088  config.cpython-314.pyc.1260561447744
marp_core/export/: __init__.py  marp.py
marp_core/export/__pycache__/: marp.cpython-314.pyc.2675299301632
marp_core/image/: __init__.py  fetcher.py  query_generator.py
marp_core/io/: __init__.py  file.py
marp_core/slide/: __init__.py  diagram_optimizer.py  generator.py  renderer.py
marp_core/slide/__pycache__/: __init__.cpython-314.pyc.1260553219664  renderer.cpython-314.pyc.1260553219808  renderer.cpython-314.pyc.3035374205184
marp_core/templates/: prompt.md
marp_core/utils/: __init__.py  mermaid.py  text.py  validators.py
marp_core/utils/__pycache__/: __init__.cpython-314.pyc.1260561448032  text.cpython-314.pyc.1260561447888  validators.cpython-314.pyc.1260561447456
md/: HOW_IT_WORKS.md  flow_diagram.md  function_flow_diagram.md  project-structure.md  technical_architecture.md
