[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marp-generator"
version = "2.0.0"
description = "Automated PowerPoint generator using GPT and Marp CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
marp-gen = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["marp_core*"]

[tool.setuptools.package-data]
"marp_core" = ["templates/*.md"]
